# techblog_201912_bazel

./: README.md
error_prone/: .bazelrc
error_prone/src/main/java/jp/flywheel/: BUILD.bazel  MyBin.java
java11/: .bazelrc
java11/src/main/java/jp/flywheel/: BUILD.bazel  MyBin.java
simple_java/src/main/java/jp/flywheel/: BUILD.bazel  MyBin.java  MyLib.java
simple_java/src/test/java/jp/flywheel/: BUILD.bazel  MyLibTest.java
simple_java_flat/src/: BUILD.bazel  MyBin.java  MyLib.java  MyLibTest.java
simple_spark/: WORKSPACE
simple_spark/src/main/scala/jp/flywheel/: BUILD.bazel  WordCount.scala
simple_spark/src/test/scala/jp/flywheel/: BUILD.bazel  WordCountTest.scala
