# src/BUILD.bazel

load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

java_library(
    name = "mylib",
    srcs = ["MyLib.java"],
)

java_binary(
    name = "mybin",
    srcs = ["MyBin.java"],
    main_class = "jp.flywheel.MyBin",
    deps = [
        ":mylib",  # or "//src:mylib",
    ],
)

java_test(
    name = "mylib_test",
    srcs = [
        "MyLibTest.java",
    ],
    test_class = "jp.flywheel.MyLibTest",
    deps = [
        ":mylib",  # or "//src:mylib",
    ],
)
